--- a/.gitmodules
+++ b/.gitmodules
@@ -1,3 +1,6 @@
 [submodule "dots"]
 	path = dots
 	url = git@github.com:yohi/dots.git
+[submodule "dotfiles"]
+	path = dotfiles
+	url = git@github.com:yohi/dots.git
