--- a/compose.yaml
+++ b/compose.yaml
@@ -1,8 +1,19 @@
 services:
   ubuntu:
-    tty: true
+    # user: $UID:$GID
     build:
       context: .
       dockerfile: Dockerfile
-    volumes:
-      - .:/home/yohi
+      args:
+        # UID: $UID
+        # GID: $GID
+        USERNAME: $USERNAME
+    tty: true
+    develop:
+      watch:
+        - action: sync
+          path: ./dotfiles
+          target: /home/yohi/dotfiles
+    # volumes:
+    #   # - .dots/:/home/yohi/dotfiles
+    #   - ./dotfiles/:/home/yohi/dotfiles:cached
